@@ -154,10 +154,6 @@
 /* Are we to override what our default encoding is? */
 #undef TCL_DEFAULT_ENCODING
 
-/* Use better emulation of non-blocking channels for channels without
-   BlockModeProc? */
-#undef TCL_IO_TRACK_OS_FOR_DRIVER_WITH_BAD_BLOCKING
-
 /* Can this platform load code from memory? */
 #undef TCL_LOAD_FROM_MEMORY
 
